# mpp

./: .gitignore  INSTALL.md  LICENSE  README.md  install.sh  pyproject.toml
src/mpp/: cli.py  core.py  recipes.py  vendor.py
src/mpp/editor/: __init__.py  clangd.py  common.py  vscode.py
