[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cppliblinker-mpp"
version = "0.1.0"
description = "Lightweight C++ module/package linker and CMake helper"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "CPPLibLinker" }
]

[project.scripts]
mpp = "mpp.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
